--- a/0 Einführung.ipynb
+++ b/0 Einführung.ipynb
@@ -9,7 +9,11 @@
     "\n",
     "- Datenaufbereitung\n",
     "- Visualisierung\n",
-    "- Prognose"
+    "- Prognose\n",
+    "\n",
+    "Die entsprechenden Notebooks führen durch den jeweiligen Aufgabenbereich. Sollte eine Python-Funktion nicht klar sein,\n",
+    "kann mit Shift+Tab eine Beschreibung im Notebook aufgerufen werden. Mehrmaliges Drücken von Shift+Tab lädt detailliertere\n",
+    "Beschreibungen."
    ]
   }
  ],
