--- a/0 Einführung.ipynb
+++ b/0 Einführung.ipynb
@@ -15,6 +15,24 @@
     "kann mit Shift+Tab eine Beschreibung im Notebook aufgerufen werden. Mehrmaliges Drücken von Shift+Tab lädt detailliertere\n",
     "Beschreibungen."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = 1\n",
+    "print(1)"
+   ]
   }
  ],
  "metadata": {
@@ -33,7 +51,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
