--- a/020 Datenvisualisierung.ipynb
+++ b/020 Datenvisualisierung.ipynb
@@ -560,6 +560,109 @@
     "\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Darstellen von Netzwerken\n",
+    "Die Darstellung von Netzwerken kann zur Informationsgewinnung beitragen, falls ein Netzwerk strukturiert und nicht zu komplex ist. Ein solches soll hier nun gezeigt werden. Dazu ist die Bibliothken _networkx_ über __pip install networkx__ zu installieren.\n",
+    "\n",
+    "Dises Beispiel beinhaltet lediglich das Hinzufügen einiger Knoten und Kanten. Ein vollständiges Tutorial ist hier zu finden: https://networkx.github.io/documentation/stable/tutorial.html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 244,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Anzahl der Knoten im Graph: 13\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'Graph' object has no attribute 'depth'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-244-230acd0170df>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     35\u001b[0m nx.draw(graph, with_labels=True,\n\u001b[1;32m     36\u001b[0m         \u001b[0mnode_size\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mgraph\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnodes\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Einwohner'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;36m100\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mn\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mgraph\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 37\u001b[0;31m         node_color = [graph.depth[n] for n in graph])\n\u001b[0m\u001b[1;32m     38\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-244-230acd0170df>\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m     35\u001b[0m nx.draw(graph, with_labels=True,\n\u001b[1;32m     36\u001b[0m         \u001b[0mnode_size\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mgraph\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnodes\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Einwohner'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;36m100\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mn\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mgraph\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 37\u001b[0;31m         node_color = [graph.depth[n] for n in graph])\n\u001b[0m\u001b[1;32m     38\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Graph' object has no attribute 'depth'"
+     ]
+    }
+   ],
+   "source": [
+    "import networkx as nx\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Erzeugen eines neuen Graphen\n",
+    "graph = nx.Graph()\n",
+    "\n",
+    "# Füge Entitäten hinzu\n",
+    "graph.add_node('Welt')\n",
+    "graph.add_nodes_from(['Deutschland', 'Berlin', 'Hamburg', 'München',\n",
+    "                      'Frankreich', 'Paris', 'Nancy', 'Tours',\n",
+    "                      'Schweiz', 'Bern', 'Zürich', 'Luzern'])\n",
+    "\n",
+    "print(\"Anzahl der Knoten im Graph: \" + str(graph.number_of_nodes()))\n",
+    "\n",
+    "# Stelle Verknüpfung zwischen den Entitäten her\n",
+    "graph.add_edges_from([('Welt', 'Deutschland'), ('Welt', 'Frankreich'), ('Welt', 'Schweiz')])\n",
+    "graph.add_edges_from([('Deutschland', 'Berlin'), ('Deutschland', 'Hamburg'), ('Deutschland', 'München')])\n",
+    "graph.add_edges_from([('Frankreich', 'Paris'), ('Frankreich', 'Nancy'), ('Frankreich', 'Tours')])\n",
+    "graph.add_edges_from([('Schweiz','Bern'), ('Schweiz','Zürich'), ('Schweiz','Luzern')])\n",
+    "\n",
+    "# Hinzufügen von Attributen zu Knoten\n",
+    "nx.set_node_attributes(graph, {\"Berlin\":3.52, \"Hamburg\":1.787, \"München\":1.45, \"Paris\":2.2, \"Nancy\":0.10, \"Tours\":0.13,\n",
+    "                               \"Bern\":0.13, \"Zürich\":0.40, \"Luzern\":0.08, \"Deutschland\":0, \"Frankreich\":0, \"Schweiz\":0,\n",
+    "                              \"Welt\":0}, \"Einwohner\")\n",
+    "\n",
+    "# Berechnung von Einwohnerzahlen der Länder auf Basis der Nachbarknoten\n",
+    "nx.set_node_attributes(graph, {\"Deutschland\": sum([graph.nodes[n[1]]['Einwohner'] for n in graph.edges(\"Deutschland\")]),\n",
+    "                               \"Frankreich\":sum([graph.nodes[n[1]]['Einwohner'] for n in graph.edges(\"Frankreich\")]),\n",
+    "                               \"Schweiz\":sum([graph.nodes[n[1]]['Einwohner'] for n in graph.edges(\"Schweiz\")])}, \"Einwohner\")\n",
+    "\n",
+    "# ... ebenso für den Primärknoten \"Welt\"\n",
+    "nx.set_node_attributes(graph, {\"Welt\":sum([graph.nodes[n[1]]['Einwohner'] for n in graph.edges(\"Welt\")])}, \"Einwohner\")\n",
+    "\n",
+    "# Zeichnen des Graphen\n",
+    "nx.draw(graph, with_labels=True,\n",
+    "        node_size = [graph.nodes[n]['Einwohner']*100 for n in graph],\n",
+    "        node_color = [graph.depth[n] for n in graph])\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Speichern von Grafiken\n",
+    "Grafiken können leicht als Datei gespeichert werden."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 432x288 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "plt.savefig(\"viz.png\")"
+   ]
   }
  ],
  "metadata": {
