added spaCy NLP part

--- a/051 Natural Language Processing - Übungen.ipynb
+++ b/051 Natural Language Processing - Übungen.ipynb
@@ -5,7 +5,8 @@
    "metadata": {},
    "source": [
     "# Natural Language Processing - Übungen\n",
-    "- Versuchen Sie für die Sprachenerkennung ein eigenes Wörterbuch zu erstellen und es anstelle der Stopwords aus _nltk_ zu verwenden."
+    "- Versuchen Sie für die Sprachenerkennung ein eigenes Wörterbuch zu erstellen und es anstelle der Stopwords aus _nltk_ zu verwenden.\n",
+    "- Ändern Sie den Beispielsatz ab, indem sie _chancellor_ groß schreiben und betrachten Sie die Auswirkungen auf die Named Entity Recognition."
    ]
   }
  ],
